@@ -2,7 +2,8 @@ CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692, STR #730, STR
 	  #744, STR #745)
-	- Fixed position of menu titles (STR #794)
+	- Fixed symbol demo label bug (STR #777)
+	- Fixed position of menu titles (STR #795)
 	- Added missing Fl_Window::copy_label() method.
 	- Fixed wrong tooltip in fluid (STR #784)
 	- Added zlib path to fluid (STR #783)
